<resources>
    <string name="app_name">FantasyF1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_team">Mój zespół</string>
    <string name="pfs_drivers_preview_dscrp">pfs_drivers_preview</string>
    <string name="edit">Edytuj</string>
    <string name="rules">Zasady</string>
    <string name="rewards">Nagrody</string>
    <string name="ranking">Ranking fantasy</string>
    <string name="plus">+</string>
    <string name="name">Imię nazwisko</string>
    <string name="price">Cena</string>
    <string name="points">Punkty</string>

</resources>