<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_background"
        android:layout_width="100dp"
        android:layout_margin="5dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:innerRadius="0dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_driver"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_button"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:backgroundTint="@color/pfs_orange"
            android:text="@string/plus"
            android:textSize="25sp"
            android:textAlignment="center"
            android:visibility="visible"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/driver_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:background="@drawable/my_team_icon"
                android:visibility="visible"
                android:contentDescription="@string/pfs_drivers_preview_dscrp">
            </ImageView>

            <TextView
                android:id="@+id/driver_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_semi_bold"
                android:gravity="center"
                android:text="@string/name"
                android:textSize="14sp">


            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/driver_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center"
                    android:text="@string/price"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/driver_points"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center"
                    android:text="@string/points"
                    android:textSize="14sp" />


            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>